调整时间间隔

--- a/best-wishes/index.html
+++ b/best-wishes/index.html
@@ -69,7 +69,7 @@
     
 
     <div class="qrcode">
-        <div>发送祝福：使用 NewPay 转账任意金额到 NEW182R2GcTXEawJZzaMc5j3NoY527ovpZYXXN9 地址，备注留下祝福语即可。</div>
+        <div>发送祝福：使用 NewPay 转账任意金额到 <a>NEW182R2GcTXEawJZzaMc5j3NoY527ovpZYXXN9</a> 地址，备注留下祝福语即可。</div>
     </div>
     
     <div class="container"></div>
