--- a/best-wishes/index.html
+++ b/best-wishes/index.html
@@ -91,7 +91,7 @@
             if (document.execCommand('copy')) {
                 document.execCommand('copy');
                 console.log('复制成功');
-                layer.msg('复制成功');
+                layer.msg('地址已复制成功');
             }
             document.body.removeChild(input);
         })
